--- a/app/src/main/res/layout/fragment_goods_cart.xml
+++ b/app/src/main/res/layout/fragment_goods_cart.xml
@@ -44,6 +44,7 @@
         android:id="@+id/mPtrframe"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/margin_15"
         app:ptr_resistance="1.7"
         app:ptr_ratio_of_header_height_to_refresh="1.2"
         app:ptr_duration_to_close="300"
