--- a/app/src/main/res/layout/fragment_goods_cart.xml
+++ b/app/src/main/res/layout/fragment_goods_cart.xml
@@ -33,11 +33,16 @@
 
     </data>
 
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
 
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/common_bg"
+    android:layout_above="@+id/v_bottom"
     android:orientation="vertical">
 
     <in.srain.cube.views.ptr.PtrFrameLayout
@@ -288,6 +293,16 @@
                 android:layout_height="39dp" />
         </LinearLayout>
     </RelativeLayout>
+</RelativeLayout>
+
+    <View
+        android:id="@+id/v_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:layout_alignParentBottom="true"
+        android:visibility="gone"
+        />
+
 </RelativeLayout>
 
 </layout>
