--- a/app/src/main/res/layout/activity_vip.xml
+++ b/app/src/main/res/layout/activity_vip.xml
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:orientation="horizontal"
-        android:background="#1C1714"
+        android:background="@color/white"
         >
 
         <LinearLayout
@@ -39,7 +39,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/tv_back"
-                android:textColor="@color/white"
+                android:textSize="@dimen/textsize18"
+                android:textColor="@color/grey_333333"
                 android:typeface="@{vip.setTypeFace()}"
                 />
 
@@ -49,8 +50,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="VIP礼包"
-            android:textColor="#ffffffff"
+            android:text="VIP专区"
+            android:textColor="@color/grey_333333"
             android:textSize="18sp"/>
 
 
@@ -59,6 +60,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:gravity="center"
+            android:onClick="@{()->vip.setWxShared()}"
             android:layout_alignParentRight="true"
             >
 
@@ -66,8 +68,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:typeface="@{vip.setTypeFace()}"
-                android:textColor="@color/white"
+                android:textColor="@color/grey_333333"
                 android:text="@string/tv_shared"
+                android:textSize="@dimen/textsize18"
                 android:layout_marginRight="@dimen/margin_10"
                 android:layout_marginLeft="@dimen/margin_10"
                 />
@@ -93,7 +96,19 @@
         android:clickable="true"
         android:focusable="true"
         android:gravity="center_horizontal"
+        android:onClick="@{()->vip.setJumpCCQ()}"
         >
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="fitXY"
+            android:layout_marginLeft="@dimen/margin_30"
+            android:layout_marginRight="@dimen/margin_30"
+            android:layout_marginTop="@dimen/margin_15"
+            android:src="@mipmap/ic_vip_ccq"
+            />
+
 
         <TextView
             android:layout_width="wrap_content"
@@ -266,13 +281,13 @@
                 android:id="@+id/rl_vip"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="480dp"
+                android:layout_marginTop="580dp"
                 >
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="480dp"
+                android:layout_marginBottom="580dp"
                 android:clickable="false"
                 android:focusable="false"
                 >
