--- a/app/src/main/res/layout/layout_me_fans.xml
+++ b/app/src/main/res/layout/layout_me_fans.xml
@@ -39,6 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
+            android:visibility="gone"
             android:gravity="center"
             >
             <TextView
@@ -105,6 +106,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical"
+            android:onClick="@{()->me.setWxShared()}"
             android:gravity="center">
 
             <ImageView
