--- a/app/src/main/res/layout/activity_orderdetail.xml
+++ b/app/src/main/res/layout/activity_orderdetail.xml
@@ -143,6 +143,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="44dp"
                 android:layout_marginLeft="@dimen/margin_10"
+                android:layout_marginRight="@dimen/margin_10"
                 android:background="@drawable/bg_order_detail_top"
                 >
 
